test/expected/regression-net-connect.txt
/scripts/regression-net-connect.js:11
  throw error;
  ^

Error: connect ECONNREFUSED 127.0.0.1:24075
    at Object._errnoException (util.js:r:c)
    at _exceptionWithHostPort (util.js:r:c)
    at TCPConnectWrap.afterConnect [as oncomplete] (net.js:r:c)
    at emitInitNative (internal/async_hooks.js:r:c)
    at emitInitScript (internal/async_hooks.js:r:c)
    at new TickObject (internal/process/next_tick.js:r:c)
    at process.nextTick (internal/process/next_tick.js:r:c)
    at _destroy (internal/streams/destroy.js:r:c)
    at Socket._destroy (net.js:r:c)
    at Socket.destroy (internal/streams/destroy.js:r:c)
    at TCPConnectWrap.afterConnect [as oncomplete] (net.js:r:c)
    at TCPConnectWrap.emitInitNative (internal/async_hooks.js:r:c)
    at net.js:r:c
    at defaultTriggerAsyncIdScope (internal/async_hooks.js:r:c)
    at internalConnect (net.js:r:c)
    at GetAddrInfoReqWrap.emitLookup [as callback] (net.js:r:c)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:r:c)
    at TCP.emitInitNative (internal/async_hooks.js:r:c)
    at Socket.connect (net.js:r:c)
    at Object.connect (net.js:r:c)
    at Object.<anonymous> (/scripts/regression-net-connect.js:r:c)
    at Module._compile (module.js:r:c)
    at Object.Module._extensions..js (module.js:r:c)
    at Module.load (module.js:r:c)
    at tryModuleLoad (module.js:r:c)
    at Function.Module._load (module.js:r:c)
    at Function.Module.runMain (module.js:r:c)
    at startup (bootstrap_node.js:r:c)
    at bootstrap_node.js:r:c
